# EPO

./: .gitignore  pyproject.toml
lightning_logs/version_0/checkpoints/: epoch=6-step=14.ckpt
src/epo/: supervised.py
src/epo/supervised/: __init__.py  __main__.py  config.py  datamodule.py  metamodel.py
