[tool.poetry]
name = "epo"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "epo", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8.16"
pytorch-lightning = "^1.8.6"
transformers = "^4.25.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
